syntax = "proto3";
package evmos.inflation.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "evmos/inflation/v1/inflation.proto";

option go_package = "github.com/tharsis/evmos/x/inflation/types";

// Query provides defines the gRPC querier service.
service Query {
  // Params returns the total set of minting parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/evmos/inflation/v1/params";
  }

  // EpochProvisions current minting epoch provisions value.
  rpc EpochProvisions(QueryEpochProvisionsRequest)
      returns (QueryEpochProvisionsResponse) {
    option (google.api.http).get = "/evmos/inflation/v1/epoch_provisions";
  }
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryEpochProvisionsRequest is the request type for the
// Query/EpochProvisions RPC method.
message QueryEpochProvisionsRequest {}

// QueryEpochProvisionsResponse is the response type for the
// Query/EpochProvisions RPC method.
message QueryEpochProvisionsResponse {
  // epoch_provisions is the current minting per epoch provisions value.
  bytes epoch_provisions = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
